[EIN-12356]-position trends alignments fix

--- a/src/app/dashboard/widgets/percentage-ratio-indicator/percentage-ratio-indicator.component.scss
+++ b/src/app/dashboard/widgets/percentage-ratio-indicator/percentage-ratio-indicator.component.scss
@@ -24,6 +24,6 @@
 
 .percentage-ratio-mar{
   .percentage-ratio__value {
-    margin: 0 5px 0 5px !important;
+    margin: 0 0 0 5px !important;
   }
 }
